--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             text-align: center;
             padding: 10px;
             width: 100%;
-            margin-top: 40px; /* Üstten boşluk ekleyin */
+            margin-top: 40px;
         }
         .social-icons a {
             margin: 0 10px;
@@ -55,6 +55,14 @@
         .btn-custom:hover, .btn-custom:focus {
             background-color: #7a7671;
             color: white;
+        }
+        .carousel {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .carousel-inner img {
+            height: 400px;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -165,13 +173,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Slider JavaScript kodları
-        var myCarousel = document.querySelector('#carouselExampleControls');
-        var carousel = new bootstrap.Carousel(myCarousel, {
-            interval: 2000,
-            wrap: true
-        });
-
         // Navigasyon menüsünde aktif bağlantıyı değiştirme
         var navItems = document.querySelectorAll('.nav-link');
         navItems.forEach(function(navItem) {
