--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         }
         .navbar {
             background-color: #7a7671;
+            margin: 20px;
+            border-radius: 10px;
         }
         .navbar .nav-link {
             color: white;
@@ -39,6 +41,7 @@
             color: white;
             padding: 64px 20px;
             text-align: center;
+            width: 100%;
         }
         #about p, #contact p {
             max-width: 600px;
@@ -92,7 +95,7 @@
     </nav>
 
     <!-- Home Bölümü -->
-    <section id="home" class="container text-center py-5">
+    <section id="home" class="container-fluid text-center py-5">
         <h2>Welcome to Our Zoo</h2>
         <p>Discover the amazing world of animals!</p>
         <p>
@@ -133,7 +136,7 @@
     <div style="height: 50px;"></div>
 
     <!-- About Us Bölümü -->
-    <section id="about" class="container text-center py-5">
+    <section id="about" class="container-fluid text-center py-5">
         <h2>About Us</h2>
         <p>
             Our zoo is dedicated to the conservation of wildlife and the education of our visitors. 
@@ -143,7 +146,7 @@
     </section>
 
     <!-- Blog Bölümü -->
-    <section id="blog" class="container text-center py-5">
+    <section id="blog" class="container-fluid text-center py-5">
         <h2>Blog</h2>
         <p>
             Explore the latest stories and updates from our zookeepers and conservationists.
@@ -152,7 +155,7 @@
     </section>
 
     <!-- Contact Bölümü -->
-    <section id="contact" class="container text-center py-5">
+    <section id="contact" class="container-fluid text-center py-5">
         <h2>Contact Us</h2>
         <p>
             We would love to hear from you! 
@@ -187,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
