--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Navigasyon Menüsü -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand text-white" href="home.html">HOME</a>
+            <a class="navbar-brand text-white" href="index.html">HOME</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
