--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             padding: 10px;
             width: 100%;
             margin-top: 40px;
+            bottom: 0;
         }
         .social-icons a {
             margin: 0 10px;
@@ -70,8 +71,6 @@
     </style>
 </head>
 <body>
-
-    <!-- Navigasyon Menüsü -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand text-white" href="index.html">HOME</a>
@@ -93,8 +92,6 @@
             </div>
         </div>
     </nav>
-
-    <!-- Home Bölümü -->
     <section id="home" class="container-fluid text-center py-5">
         <h2>Welcome to Our Zoo</h2>
         <p>Discover the amazing world of animals!</p>
@@ -106,7 +103,6 @@
         </p>
     </section>
 
-    <!-- Slider Bölümü -->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -132,10 +128,8 @@
         </button>
     </div>
 
-    <!-- Boşluk -->
     <div style="height: 50px;"></div>
 
-    <!-- About Us Bölümü -->
     <section id="about" class="container-fluid text-center py-5">
         <h2>About Us</h2>
         <p>
@@ -145,7 +139,6 @@
         <a href="aboutus.html" class="btn btn-custom">Learn More</a>
     </section>
 
-    <!-- Blog Bölümü -->
     <section id="blog" class="container-fluid text-center py-5">
         <h2>Blog</h2>
         <p>
@@ -154,7 +147,6 @@
         <a href="blog.html" class="btn btn-custom">Read Our Blog</a>
     </section>
 
-    <!-- Contact Bölümü -->
     <section id="contact" class="container-fluid text-center py-5">
         <h2>Contact Us</h2>
         <p>
@@ -164,7 +156,6 @@
         <a href="contact.html" class="btn btn-custom">Get in Touch</a>
     </section>
 
-    <!-- Footer -->
     <footer class="footer text-center py-4">
         <div class="social-icons">
             <a href="https://www.facebook.com/">Facebook</a>
@@ -176,7 +167,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Navigasyon menüsünde aktif bağlantıyı değiştirme
         var navItems = document.querySelectorAll('.nav-link');
         navItems.forEach(function(navItem) {
             navItem.addEventListener('click', function() {
@@ -190,6 +180,7 @@
 
 </body>
 </html>
+
 
 
 
