--- a/aboutus.html
+++ b/aboutus.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Zoo Website</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
     <style>
         body {
             font-family: 'Josefin Sans', sans-serif;
+            position: relative;
+            margin-bottom: 100px;
         }
         .footer {
             background-color: #cd6e57;
@@ -16,7 +18,9 @@
             text-align: center;
             padding: 10px;
             width: 100%;
-            margin-top: 40px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
         }
         .social-icons a {
             margin: 0 10px;
@@ -25,79 +29,64 @@
         }
         .navbar {
             background-color: #7a7671;
+            margin: 20px;
+            border-radius: 10px;
         }
-        .navbar-nav .nav-link {
-            color: white;
-            transition: color 0.3s;
-        }
-        .navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus {
-            color: #cd6e57;
-        }
-        #about {
-            background-color: #7a7671;
-            color: white;
-            padding: 64px 20px;
-            text-align: center;
-        }
-        #about p {
-            max-width: 600px;
-            margin: 0 auto 20px;
-        }
-        .btn-custom {
-            background-color: #cd6e57;
+        .navbar .nav-link {
             color: white;
             transition: background-color 0.3s, color 0.3s;
         }
-        .btn-custom:hover, .btn-custom:focus {
-            background-color: #7a7671;
+        .navbar .nav-link:hover, .navbar .nav-link:focus, .navbar .active {
+            background-color: #cd6e57;
             color: white;
+        }
+        #about {
+            background-color: white;
+            color: black;
+            padding: 64px 20px;
+            text-align: center;
+            width: 100%;
+        }
+        .about-image {
+            margin-top: 40px;
+            max-width: 800px;
+            margin-bottom: 40px;
         }
     </style>
 </head>
 <body>
-
-    <!-- Navigation Menu -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="home.html">HOME</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="aboutus.html">ABOUT US</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="blog.html">BLOG</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">CONTACT</a>
-                </li>
-            </ul>
+        <div class="container">
+            <a class="navbar-brand text-white" href="index.html">HOME</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog.html">BLOG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <!-- About Us Section -->
-    <section id="about" class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>About Us</h2>
-                <p>
-                    Our zoo is dedicated to the conservation of wildlife and the education of our visitors. 
-                    <br>Learn more about our mission and values, and how we are working to protect animals and their habitats.
-                </p>
-                <p>
-                    We are passionate about providing a safe and natural environment for our animals.
-                    <br>Our team of experts works tirelessly to ensure the health and well-being of every creature in our care.
-                    <br>Join us on our mission to promote conservation and inspire the next generation of wildlife enthusiasts.
-                </p>
-                <a href="contact.html" class="btn btn-custom">Get in Touch</a>
-            </div>
-        </div>
+    <section id="about" class="container-fluid text-center py-5">
+        <h2>ABOUT US</h2>
+        <img src="aboutusphoto.jpg" alt="About Us" class="about-image">
+        <p>
+            Our zoo is dedicated to the conservation of wildlife and the education of our visitors. 
+            <br>Learn more about our mission and values, and how we are working to protect animals and their habitats.
+        </p>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer py-3">
+    <footer class="footer text-center py-4">
         <div class="social-icons">
             <a href="https://www.facebook.com/">Facebook</a>
             <a href="https://x.com/">X</a>
@@ -106,21 +95,6 @@
         <p>&copy; 2024 Zoo Website</p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        // Change active link in navigation menu
-        var navLinks = document.querySelectorAll('.nav-link');
-        navLinks.forEach(function(navLink) {
-            navLink.addEventListener('click', function() {
-                navLinks.forEach(function(link) {
-                    link.classList.remove('active');
-                });
-                this.classList.add('active');
-            });
-        });
-    </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
