--- a/aboutus.html
+++ b/aboutus.html
@@ -7,84 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
     <style>
-        body {
-            font-family: 'Josefin Sans', sans-serif;
-            position: relative;
-            margin-bottom: 100px;
-        }
-        .footer {
-            background-color: #cd6e57;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            width: 100%;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-        }
-        .social-icons a {
-            margin: 0 10px;
-            color: white;
-            text-decoration: none;
-        }
-        .navbar {
-            background-color: #7a7671;
-            margin: 20px;
-            border-radius: 10px;
-        }
-        .navbar .nav-link {
-            color: white;
-            transition: background-color 0.3s, color 0.3s;
-        }
-        .navbar .nav-link:hover, .navbar .nav-link:focus, .navbar .active {
-            background-color: #cd6e57;
-            color: white;
-        }
-        #about {
-            background-color: white;
-            color: black;
-            padding: 64px 20px;
-            text-align: center;
-            width: 100%;
-        }
-        .about-image {
-            margin-top: 40px;
-            max-width: 800px;
-            margin-bottom: 40px;
+        /* Mevcut stiller buraya gelecek */
+
+        /* Ekstra stiller */
+        @media screen and (max-width: 768px) {
+            .navbar {
+                margin: 0; /* Ekran daraltıldığında boşlukları azaltmak için */
+            }
+            .about-image {
+                max-width: 100%; /* Küçük ekranlarda görsel tam olarak sığması için */
+            }
         }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand text-white" href="index.html">HOME</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">ABOUT US</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">BLOG</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <section id="about" class="container-fluid text-center py-5">
-        <h2>ABOUT US</h2>
-        <img src="aboutusphoto.jpg" alt="About Us" class="about-image">
-        <p>
-            Our zoo is dedicated to the conservation of wildlife and the education of our visitors. 
-            <br>Learn more about our mission and values, and how we are working to protect animals and their habitats.
-        </p>
-    </section>
+    <!-- Mevcut HTML kodu buraya gelecek -->
 
     <footer class="footer text-center py-4">
         <div class="social-icons">
@@ -98,3 +35,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
